ext: make sure there is no scrollbar by default

--- a/browser-extension/src/options/options.css
+++ b/browser-extension/src/options/options.css
@@ -156,6 +156,6 @@ div.sticky-submit .flex-container {
 
 .page-tab.active #iframe-tournesol-preferences {
   width: 100%;
-  height: 78vh;
+  height: calc(100vh - 194px);
   max-height: unset;
 }
